--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="shortcut icon" href="images/weblogo.jpg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Bootcamp-project</title>
-
+    <link rel="shortcut icon" href="images/edulight.jpg">
     <link rel="stylesheet" href="css/style.css">
+    <title>Bootcamp-project</title>
 </head>
 <body>
     <div class="nav">
@@ -25,14 +24,13 @@
 
     <div id="about">
       <h3 about="about">
-        Developing Information<br />Technology Enterpreneurs<br />and Tech - Driven Business
-      </h3>
+        Developing Information<br />
+        Technology Enterpreneurs<br />and
+        Tech-Driven Business
     </div>
 
-      <div id="accolade">
-      <h2>Edulight <br>Consulting</h2>
-      <br>
-      Impossibilities Become Possible
+    <div id="accolade"><h2 data-edu="edu">Edulight <br /> <span data-con="con">Consulting</span></h2>
+        <p>Impossibilities become possible</p>
     </div>
 
     <div id="services">
@@ -58,32 +56,8 @@
         <p class="first"> <span class="phone"> <img src="images/mobile phone logo.png" alt=""> <br> </span> 08033443078 <br /> 08080709304</p>
         <p class="second"> <span class="phone"> <img src="images/location logo.png" alt=""> <br> </span> 1st Floor, Leventis Building,<br> Dugbe, Ibadan.</p>
         <p class="third"> <span class="phone"> <img src="images/web logo 2.jpg" alt=""> <br> </span> www.edulightconsulting.com.ng</p>
-           <!-- <a href="" target="-blank">	
-            <img src="images/facebook.png" title="Facebook" height="20" width="20">
-            </a>
-            <a href="" target="-blank">	
-                <img src="images/instagram.jpg" title="Instagram" height="20" width="20">
-            </a>
-            <a href="" target="-blank">	
-                <img src="images/twitter.png" title="Twitter" height="20" width="20">
-            </a>
-            <a href="" target="-blank">	
-                <img src="images/pinterest.png" title="Pinterest" height="20" width="20">
-            </a>
-            <a href="" target="-blank">	
-                <img src="images/whatsapp.png" title="Whatsapp" height="20" width="20">
-            </a>
-            <a href="" target="-blank">	
-                <img src="images/telegram.png" title="Telegram" height="20" width="20">
-            </a>
-            <a href="" target="-blank">	
-                <img src="images/wechat.png" title="Wechat" height="20" width="20">
-            </a> -->
-    
+
     </div>
-   
+    
 </body>
 </html>
-
-
-
